Accessory bar next/previous buttons do not work on inputs in shadow roots https://bugs.webkit.org/show_bug.cgi?id=203292

Patch by Tetsuharu Ohzeki <tetsuharu.ohzeki@gmail.com> on 2020-10-27
Reviewed by Ryosuke Niwa.

Source/WebCore:

Tests: fast/shadow-dom/ios/accessory-bar-work-on-input-with-tabindex-in-shadow-tree.html

* page/FocusController.cpp:
(WebCore::FocusController::nextFocusableElement):
(WebCore::FocusController::previousFocusableElement):

LayoutTests:

Introduced testcases only need to run with iOS family.

* fast/shadow-dom/ios/accessory-bar-work-on-input-with-tabindex-in-shadow-tree-expected.txt: Added.
* fast/shadow-dom/ios/accessory-bar-work-on-input-with-tabindex-in-shadow-tree.html: Added.
* TestExpectations:
* platform/ios/TestExpectations:
  Avoid to run introduced tests because we don't have to run them and
  tests are crashed on these platforms.
* resources/ui-helper.js:
(window.UIHelper.moveToNextByKeyboardAccessoryBar):
(window.UIHelper.moveToPrevByKeyboardAccessoryBar):
(window.UIHelper):

Canonical link: https://commits.webkit.org/230950@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269059 268f45cc-cd09-0410-ab3c-d52691b4dbfc